--- a/EshopWeb/appsettings.json
+++ b/EshopWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=/home/enesd/databases/eshop.db"
+  }
 }
