--- a/EshopWeb/EshopWeb.csproj
+++ b/EshopWeb/EshopWeb.csproj
@@ -15,4 +15,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Eshop.DataAccess\Eshop.DataAccess.csproj" />
+    <ProjectReference Include="..\Eshop.Models\Eshop.Models.csproj" />
+    <ProjectReference Include="..\Eshop.Utility\Eshop.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
