--- a/EshopWeb/appsettings.json
+++ b/EshopWeb/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=/home/enesd/databases/eshop.db"
+    // "Default": "Data Source=/home/enesd/databases/eshop.db"
+    "Default": "Data Source=C:\\sqlite\\eshop.db"
   }
 }
