implement stripe in test mode

--- a/EshopWeb/appsettings.json
+++ b/EshopWeb/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     // "Default": "Data Source=/home/enesd/databases/eshop.db"
     "Default": "Data Source=C:\\sqlite\\eshop.db"
+  },
+  "Stripe": {
+    "SecretKey": "Stripe Secret Key",
+    "PublishableKey": "Stripe Publishable Key"
   }
 }
