--- a/EshopWeb/appsettings.json
+++ b/EshopWeb/appsettings.json
@@ -13,5 +13,9 @@
   "Stripe": {
     "SecretKey": "Stripe Secret Key",
     "PublishableKey": "Stripe Publishable Key"
+  },
+  "Facebook": {
+    "AppId": "Facebook App Id",
+    "AppSecret": "Facebook App Secret"
   }
 }
